--- a/.github/workflows/render-readme.yaml
+++ b/.github/workflows/render-readme.yaml
@@ -23,7 +23,7 @@ jobs:
           - {os: macOS-latest, r: 'release'}
 
     env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_PAT: ${{ secrets.CI_SECRET }}
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
