--- a/.github/workflows/render-manuscript.yml
+++ b/.github/workflows/render-manuscript.yml
@@ -7,7 +7,7 @@ name: Render Manuscript
 
 jobs:
   render:
-    name: Render Manuscript
+    name: Render Manuscript $${{ matrix.config.os }} $${{ matrix.config.r }}
     runs-on: ${{ matrix.config.os }}
 
     strategy:
