--- a/.github/workflows/render-manuscript.yml
+++ b/.github/workflows/render-manuscript.yml
@@ -22,10 +22,11 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       - uses: r-lib/actions/setup-pandoc@v1
       - name: Install libcurl on linux
+        if: matrix.os == 'ubuntu-20.04'
         run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
+          #if [ "$RUNNER_OS" == "Linux" ]; then
             sudo apt-get install libcurl4-openssl-dev
-          fi
+          #fi
       - name: Install rmarkdown, remotes, and the local package
         run: |
           install.packages("remotes",repos='https://cloud.r-project.org')
