--- a/.github/workflows/render-manuscript.yml
+++ b/.github/workflows/render-manuscript.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       - uses: r-lib/actions/setup-pandoc@v1
       - name: Install libcurl on linux
-        if: matrix.os == 'ubuntu-20.04'
+        if: runner.os == 'Linux'
         run: |
           #if [ "$RUNNER_OS" == "Linux" ]; then
             sudo apt-get install libcurl4-openssl-dev
