--- a/.github/workflows/render-manuscript.yml
+++ b/.github/workflows/render-manuscript.yml
@@ -21,12 +21,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
       - uses: r-lib/actions/setup-pandoc@v1
+
       - name: Install libcurl on linux
         if: runner.os == 'Linux'
-        run: |
-          #if [ "$RUNNER_OS" == "Linux" ]; then
-            sudo apt-get install libcurl4-openssl-dev
-          #fi
+        run:sudo apt-get install libcurl4-openssl-dev
+
       - name: Install rmarkdown, remotes, and the local package
         run: |
           install.packages("remotes",repos='https://cloud.r-project.org')
@@ -42,5 +41,6 @@ jobs:
           cat('\n\nDone tidbits\n\n')
           cat('\n\nDone Package Installs\n\n')
         shell: Rscript {0}
+
       - name: Render Files
-        run: Rscript -e 'rmarkdown::render("efi_patientsafety.Rmd")'
+        run: Rscript -e 'rmarkdown::render(file.path(".","efi_patientsafety.Rmd"))'
