--- a/.github/workflows/render-manuscript.yml
+++ b/.github/workflows/render-manuscript.yml
@@ -12,8 +12,8 @@ jobs:
           - {os: ubuntu-20.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
           #- {os: ubuntu-20.04, r: 'devel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
           #- {os: ubuntu-20.04, r: 'oldrel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          - {os: windows-latest, r: 'release'}
-          - {os: macOS-latest, r: 'release'}
+          #- {os: windows-latest, r: 'release'}
+          #- {os: macOS-latest, r: 'release'}
 
     env:
       GITHUB_PAT: ${{ secrets.CI_SECRET }}
@@ -44,9 +44,10 @@ jobs:
         run: ./initgitmods.sh
         shell: bash
 
-      #- name: Debug via tmate
-      #  if: runner.os == 'Linux'
-      #  uses: mxschmitt/action-tmate@v3
+      - name: Debug via tmate
+        if: runner.os == 'Linux'
+        uses: csexton/debugger-action@master
+        #uses: mxschmitt/action-tmate@v3
 
       - name: Render Files
         run: Rscript -e 'rmarkdown::render(file.path(".","efi_patientsafety.Rmd"))'
