--- a/.github/workflows/render-manuscript.yml
+++ b/.github/workflows/render-manuscript.yml
@@ -40,6 +40,18 @@ jobs:
           cat('\n\nDone Package Installs\n\n')
         shell: Rscript {0}
 
+      - name: Cache Renv packages
+        uses: actions/cache@v2
+        with:
+          path: $HOME/.local/share/renv
+          key: r-${{ hashFiles('renv.lock') }}
+          restore-keys: r-
+
+      - name: Install packages
+        run: |
+          R -e 'install.packages("renv")'
+          R -e 'renv::restore()'
+
       - name: Install submodules
         run: ./initgitmods.sh
         shell: bash
