render-manuscript.yml; tweak; rmarkdown and bookdown cached

--- a/.github/workflows/render-manuscript.yml
+++ b/.github/workflows/render-manuscript.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Install rmarkdown, remotes, and the local package
         run: |
           install.packages("remotes",repos='https://cloud.r-project.org')
-          install.packages("bookdown",repos='https://cloud.r-project.org')
+          #install.packages("bookdown",repos='https://cloud.r-project.org')
           cat('\n\nDone install.packages\n\n')
-          remotes::install_cran("rmarkdown")
+          #remotes::install_cran("rmarkdown")
           cat('\n\nDone install_cran\n\n')
           remotes::install_github('bokov/rio')
           cat('\n\nDone rio\n\n')
