render-manuscript.yml; debug; Set option for 'repos'

--- a/.github/workflows/render-manuscript.yml
+++ b/.github/workflows/render-manuscript.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Install rmarkdown, remotes, and the local package
         run: |
+          options(repos='https://cloud.r-project.org')
           install.packages("remotes",repos='https://cloud.r-project.org')
           #install.packages("bookdown",repos='https://cloud.r-project.org')
           cat('\n\nDone install.packages\n\n')
