--- a/.github/workflows/render-manuscript.yml
+++ b/.github/workflows/render-manuscript.yml
@@ -49,7 +49,7 @@ jobs:
           restore-keys: r-
 
       - name: Install packages
-        run:  R -e 'options(repos='https://cloud.r-project.org'); install.packages("renv"); renv::restore()'
+        run:  R -e "options(repos='https://cloud.r-project.org'); install.packages('renv'); renv::restore()"
 
       - name: Install submodules
         run: ./initgitmods.sh
