--- a/.github/workflows/render-manuscript.yml
+++ b/.github/workflows/render-manuscript.yml
@@ -55,9 +55,9 @@ jobs:
         run: ./initgitmods.sh
         shell: bash
 
-      - name: Debug via tmate
-        if: runner.os == 'Linux'
-        uses: csexton/debugger-action@master
+      #- name: Debug via tmate
+        #if: runner.os == 'Linux'
+        #uses: csexton/debugger-action@master
         #uses: mxschmitt/action-tmate@v3
 
       - name: Render Files
