--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,13 @@
 .Rhistory
 .Rapp.history
 # Session Data files
-.RData
-.rdata
+*.RData
+*.rdata
+*.Rdata
+*.docx
+*.pdf
+renv.lock
+*.odt
 # Example code in package build process
 *-Ex.R
 # Output files from R CMD build
